--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "client",
+  "name": "apartment-admin-vuejs",
   "version": "0.1.0",
+  "description": "Admin panel for apartment",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,9 +10,28 @@
     "test:e2e": "vue-cli-service test:e2e",
     "test:unit": "vue-cli-service test:unit"
   },
+  "keywords": [
+    "API",
+    "apartment",
+    "admin",
+    "vue.js",
+    "vuetify",
+    "router",
+    "store"
+  ],
+  "author": "Oleg Nosov <nosovoleg@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/osnosov/apartment-admin-vuejs.git"
+  },
+  "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-rc.1",
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.3.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -24,6 +44,8 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "material-design-icons-iconfont": "^3.0.3",
+    "vue-cli-plugin-vuetify": "^0.2.1",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -40,6 +62,10 @@
       "parser": "babel-eslint"
     }
   },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
   "postcss": {
     "plugins": {
       "autoprefixer": {}
@@ -48,7 +74,7 @@
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 8"
+    "not ie <= 10"
   ],
   "jest": {
     "moduleFileExtensions": [
